k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: joon97/ticket-front:ec64834
          ports:
            - containerPort: 80
          imagePullPolicy: Always #일단 개발용으로 always
