k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80          
      targetPort: 80    # Deployment의 containerPort
  type: LoadBalancer
